--- a/css/table.css
+++ b/css/table.css
@@ -1,37 +1,39 @@
 .table {
-    width: 100%;
-    font-family: 'Roboto', sans-serif;
-    border-collapse: collapse;
+  width: 100%;
+  font-family: "Roboto", sans-serif;
+  border-collapse: collapse;
 }
 
 .table__caption {
-    font-weight: bold;
+  font-weight: bold;
+  margin-bottom: 10px;
+  font-size: 20px;
+  color: #144883;
 }
 
 .table__cell--header {
-    background-color: #117cf7;
-    border: 1px solid navy;
-    color: white;
-    padding: 10px;
-    text-align: center;
+  background-color: #117cf7;
+  border: 1px solid navy;
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
 
 .table__cell {
-    border: 1px solid navy;
-    padding: 10px;
-    text-align: center;
+  border: 1px solid navy;
+  padding: 10px;
+  text-align: center;
 }
 
 .table__row {
-    border: 1px solid navy;
-    text-align: center;
+  border: 1px solid navy;
+  text-align: center;
 }
 
 .tableRow:nth-child(even) {
-    background-color: #eee;
+  background-color: #eee;
 }
 
 .tableRow:hover {
-    background-color: #adaaaa;
+  background-color: #adaaaa;
 }
-
